<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.home.HomeFragment">

    <TextView
        android:id="@+id/tv_title_home"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_space"
        android:text="@string/text_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_popular_movie"
        style="@style/Title.medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_space"
        android:layout_marginTop="@dimen/medium_space"
        android:text="@string/text_popular_movie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_home" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_popular_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/small_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_popular_movie">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popular_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingHorizontal="@dimen/medium_space"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck"
            tools:itemCount="1"
            tools:listitem="@layout/item_movie" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_popular_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/medium_space"
            android:paddingEnd="0dp"
            android:clipToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include layout="@layout/layout_poster_shimmer" />

        </com.facebook.shimmer.ShimmerFrameLayout>

        <ProgressBar
            android:id="@+id/pb_popular_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_top_rated_movie"
        style="@style/Title.medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_space"
        android:layout_marginTop="@dimen/small_space"
        android:text="@string/text_top_rated_movie"
        app:layout_constraintTop_toBottomOf="@id/cl_popular_movie"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_top_rated_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/small_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_top_rated_movie"
        app:layout_constraintStart_toStartOf="parent" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_top_rated_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingHorizontal="@dimen/medium_space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck"
            tools:itemCount="1"
            tools:listitem="@layout/item_movie" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_top_rated_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/medium_space"
            android:paddingEnd="0dp"
            android:clipToPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include layout="@layout/layout_poster_shimmer" />

        </com.facebook.shimmer.ShimmerFrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>