<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.fragment.detailmovie.DetailMovieFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_backdrop"
            android:layout_width="0dp"
            android:layout_height="260dp"
            android:alpha="0.6"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/backgrounds/scenic" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_16"
            android:layout_marginTop="@dimen/size_16"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck">

            <ImageView
                android:id="@+id/iv_arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/size_2"
                android:contentDescription="@null"
                android:padding="@dimen/size_4"
                android:src="@drawable/ic_back_arrow" />

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_poster"
            android:layout_width="@dimen/width_poster"
            android:layout_height="@dimen/height_poster"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@id/iv_backdrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_backdrop"
            app:shapeAppearance="@style/roundedImageView.mediumRounded"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_title_movie"
            style="@style/Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium_space"
            android:layout_marginTop="@dimen/small_space"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_poster"
            tools:text="Society of the Snow (2024)" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_small_space"
            android:paddingHorizontal="@dimen/medium_space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_movie"/>

        <TextView
            android:id="@+id/tv_release_played_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_small_space"
            android:textSize="@dimen/text_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cg_genre"
            tools:text="12/15/2023 | 2h 24m" />

        <TextView
            android:id="@+id/tv_title_overview"
            style="@style/Title.medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_space"
            android:text="@string/text_overview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_played_time" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium_space"
            android:layout_marginTop="@dimen/extra_small_space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_overview"
            tools:text="When a peaceful colony on the edge of the galaxy finds itself threatened by the armies of the tyrannical Regent Balisarius, they dispatch Kora, a young woman with a mysterious past, to seek out warriors from neighboring planets to help them take a stand." />

        <TextView
            android:id="@+id/tv_title_cast"
            style="@style/Title.medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_space"
            android:layout_marginTop="@dimen/small_space"
            android:text="@string/text_cast"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_cast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/small_space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_cast">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_actors"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingHorizontal="@dimen/medium_space"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:itemCount="1"
                tools:listitem="@layout/item_cast" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_title_similar_movie"
            style="@style/Title.medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_space"
            android:layout_marginTop="@dimen/small_space"
            android:text="@string/text_similar_movie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_cast" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_similar_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/small_space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_similar_movie">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_similar_movie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingHorizontal="@dimen/medium_space"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:itemCount="1"
                tools:listitem="@layout/item_movie" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_similar_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/medium_space"
                android:paddingEnd="0dp"
                android:clipToPadding="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <include layout="@layout/layout_poster_shimmer" />

            </com.facebook.shimmer.ShimmerFrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/pb_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>